[gd_scene load_steps=4 format=3 uid="uid://dbbjvj0dmrkpj"]

[ext_resource type="Theme" uid="uid://do6m4y5l1ruhd" path="res://ui_theme.tres" id="1_gq6k5"]
[ext_resource type="Script" path="res://scenes/UI/main_menu.gd" id="1_v4xto"]
[ext_resource type="PackedScene" uid="uid://74dwo7ty5qh0" path="res://scenes/UI/controls_ui.tscn" id="3_3b3qt"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gq6k5")
script = ExtResource("1_v4xto")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Menu" type="VBoxContainer" parent="PanelContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Header" type="Label" parent="PanelContainer/HBoxContainer4/Menu"]
layout_mode = 2
theme_type_variation = &"HeaderLabel"
text = "Symlink"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/HBoxContainer4/Menu"]
layout_mode = 2
alignment = 1

[node name="ContinueButton" type="Button" parent="PanelContainer/HBoxContainer4/Menu/HBoxContainer3"]
visible = false
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
focus_mode = 0
text = "Continue"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer4/Menu"]
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="PanelContainer/HBoxContainer4/Menu/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
focus_mode = 0
text = "Start"

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/HBoxContainer4/Menu"]
layout_mode = 2
alignment = 1

[node name="CreditsButton" type="Button" parent="PanelContainer/HBoxContainer4/Menu/HBoxContainer4"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
focus_mode = 0
text = "Credits"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/HBoxContainer4/Menu"]
layout_mode = 2
alignment = 1

[node name="QuitButton" type="Button" parent="PanelContainer/HBoxContainer4/Menu/HBoxContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
focus_mode = 0
text = "Quit"

[node name="ControlMargin" parent="PanelContainer/HBoxContainer4" instance=ExtResource("3_3b3qt")]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="PanelContainer/HBoxContainer4/Menu/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer4/Menu/HBoxContainer4/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer4/Menu/HBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
